# desktop-hud

./: .gitignore  README.md  config.example.yaml  pyproject.toml
layouts/: default.yaml  flames.yaml  last-used.yaml
pkg/systemd/: desktop-hud.service
src/desktop_hud/: __init__.py  __main__.py  api.py  app.py  config.py  discovery.py  editor.py  layouts.py  snap.py  style.css
src/desktop_hud/elements/: __init__.py  base.py  graph.py  image.py  video.py
tests/: test_api_dispatch.py  test_element_source_policy.py  test_layout_profiles.py  test_video_element_runtime.py
